[CDAP-21184] Changes to support running CDAP on Java 11 runtime